Security fix: Remove secrets from tracking and add env.example

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,74 +1,58 @@
-# Application
-APP_NAME="Who's That Pokémon API"
-APP_VERSION=1.0.0
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=whosthatpokemon
+DB_USER=your_username
+DB_PASS=your_password
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRY=24h
+
+# CORS Configuration
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_REDIRECT_URI=http://localhost:5173/auth/callback
+
+# Application Configuration
 APP_ENV=development
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
-# Database
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=whosthatpokemon
-DB_USERNAME=root
-DB_PASSWORD=
-
-# Redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
-
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_ALGORITHM=HS256
-JWT_EXPIRATION=3600
-JWT_REFRESH_EXPIRATION=604800
-
-# Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
-
-# PokéAPI
-POKEAPI_BASE_URL=https://pokeapi.co/api/v2
-POKEAPI_CACHE_TTL=3600
-
 # Rate Limiting
 RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=3600
-
-# CORS
-CORS_ORIGINS=http://localhost:3000,https://whosthatpokemon.com
+RATE_LIMIT_WINDOW=15
 
 # Logging
 LOG_LEVEL=debug
 LOG_FILE=logs/app.log
 
-# Email (Optional)
-MAIL_DRIVER=smtp
+# Session Configuration
+SESSION_LIFETIME=120
+SESSION_CLEANUP_INTERVAL=60
+
+# Game Configuration
+MAX_POKEMON_ID=1010
+GAME_SESSION_TIMEOUT=300
+POKE_ENERGY_MAX=10
+POKE_ENERGY_REFILL_RATE=1
+POKE_ENERGY_REFILL_INTERVAL=300
+
+# Cache Configuration
+CACHE_TTL=3600
+CACHE_PREFIX=whosthatpokemon
+
+# Security
+BCRYPT_ROUNDS=12
+PASSWORD_MIN_LENGTH=8
+
+# Email Configuration (if needed)
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=tls
+MAIL_USERNAME=your_email@gmail.com
+MAIL_PASSWORD=your_app_password
 MAIL_FROM_ADDRESS=noreply@whosthatpokemon.com
-MAIL_FROM_NAME="Who's That Pokémon"
-
-# File Upload
-UPLOAD_MAX_SIZE=5242880
-UPLOAD_ALLOWED_TYPES=jpg,jpeg,png,gif,webp
-
-# WebSocket
-WS_HOST=localhost
-WS_PORT=8080
-WS_SSL=false
-
-# Monitoring (Optional)
-SENTRY_DSN=
-GOOGLE_ANALYTICS_ID=
-
-# Feature Flags
-FEATURE_WEBSOCKET=true
-FEATURE_ANALYTICS=false
-FEATURE_EMAIL_NOTIFICATIONS=false
-FEATURE_PUSH_NOTIFICATIONS=false
+MAIL_FROM_NAME=Who's That Pokemon
